--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/238a9ca503.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,6 +33,7 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
+    <h2>Portfolio</h2>
     <h1>Ariana Ledezma</h1>
   </body>
 </html>
