--- a/index.html
+++ b/index.html
@@ -35,5 +35,16 @@
   <body>
     <h2>Portfolio</h2>
     <h1>Ariana Ledezma</h1>
+    <h4>Front-End Web Developer, based in San Diego, CA 🇺🇸</h4>
+    <img src="/img/smile.jpeg" width="600" class="homepage-image" />
+    <a href="/about.html" class="btn homepage about"
+      ><i class="fa-solid fa-user"></i> About Me</a
+    >
+    <a href="/work.html" class="btn homepage projects"
+      ><i class="fa-solid fa-folder-open"></i> Projects</a
+    >
+    <a href="/contact.html" class="btn homepage contact"
+      ><i class="fa-solid fa-envelope"></i> Contact Me</a
+    >
   </body>
 </html>
