Mostly finished Homepage Editing

--- a/index.html
+++ b/index.html
@@ -33,18 +33,30 @@
     ></script>
   </head>
   <body>
-    <h2>Portfolio</h2>
-    <h1>Ariana Ledezma</h1>
-    <h4>Front-End Web Developer, based in San Diego, CA 🇺🇸</h4>
-    <img src="/img/smile.jpeg" width="600" class="homepage-image" />
-    <a href="/about.html" class="btn homepage about"
-      ><i class="fa-solid fa-user"></i> About Me</a
-    >
-    <a href="/work.html" class="btn homepage projects"
-      ><i class="fa-solid fa-folder-open"></i> Projects</a
-    >
-    <a href="/contact.html" class="btn homepage contact"
-      ><i class="fa-solid fa-envelope"></i> Contact Me</a
-    >
+    <div class="hero">
+      <h2>Portfolio</h2>
+      <h1>Ariana Ledezma</h1>
+      <h4>Front-End Web Developer, based in San Diego, CA </h4>
+      <br />
+      <img src="/img/smile.jpeg" width="600" class="homepage-image img-fluid" />
+    
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <a href="/about.html" class="btn homepage about"
+            title="About Me"><i class="fa-solid fa-user"></i> </a
+          >
+        </div>
+        <div class="col-sm-4">
+          <a href="/work.html" class="btn homepage projects"
+            title="Projects"><i class="fa-solid fa-folder-open"></i></a
+          >
+        </div>
+        <div class="col-sm-4">
+          <a href="/contact.html" class="btn homepage contact"
+            title="Contact Me"><i class="fa-solid fa-envelope"></i> </a
+          >
+      </div>
+    </div>
   </body>
 </html>
