--- a/about.html
+++ b/about.html
@@ -31,9 +31,12 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+    <nav
+      class="navbar navbar-expand-lg bg-body-tertiary fixed-top navbar-dark bg-dark"
+      dstyle="background-color: #e3f2fd;"
+    >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand text-bg-dark p-3" href="/">Ariana E. Ledezma</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -48,16 +51,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a
+                class="nav-link active text-bg-dark p-3"
+                aria-current="page"
+                href="/"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About Me</a>
+              <a class="nav-link active text-bg-dark p-3" href="/about.html"
+                >About Me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/work.html">Projects</a>
+              <a class="nav-link active text-bg-dark p-3" href="/work.html"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Me</a>
+              <a class="nav-link active text-bg-dark p-3" href="/contact.html"
+                >Contact Me</a
+              >
             </li>
           </ul>
         </div>
