--- a/work.html
+++ b/work.html
@@ -30,5 +30,52 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg bg-body-tertiary fixed-top navbar-dark bg-dark"
+      dstyle="background-color: #e3f2fd;"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand text-bg-dark p-3" href="/">Ariana E. Ledezma</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active text-bg-dark p-3"
+                aria-current="page"
+                href="/"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-bg-dark p-3" href="/about.html"
+                >About Me</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-bg-dark p-3" href="/work.html"
+                >Projects</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-bg-dark p-3" href="/contact.html"
+                >Contact Me</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
