Added info to about page

--- a/about.html
+++ b/about.html
@@ -29,6 +29,10 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/238a9ca503.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav
@@ -77,5 +81,59 @@
         </div>
       </div>
     </nav>
+    <h1 class="about-title">About Me</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <img
+            src="/img/shadow.jpg"
+            width="600"
+            class="about-image img-fluid p-50"
+          />
+        </div>
+        <div class="col-md-5">
+          <p class="about-info">
+            I am a Certfied Front-end Web Developer from San Diego, CA. Some of
+            my favorite projects to create have been the Weather App and the
+            World Clock that can be found in my <i>Projects</i> Page.
+          </p>
+          <p class="about-info">
+            I am excited to take on new challenges that push my coding skills
+            and knowledge to the brink. Fun projects, colors, palletes, and user
+            experiences are my favorite areas of expertise. Seeing where
+            information fits, where a color may go, and where a transition could
+            be aesthetically pleasing is always a great challenge to take on.
+          </p>
+          <p class="about-info">
+            My training has been through SheCodes workshops. We have been taught
+            the ins and outs of HTML, CSS, JavaScript, Bootstrap, Netlify,
+            GitHub, AXIOS, FontAwesome, CodeSandbox & much more! I am certified
+            and have multiple certifcates and projects to back that up. Please
+            enjoy my projects in the
+            <i>Projects</i> Page and hope to be apart of
+            YOUR project soon!
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container about-page-bottom">
+      <div class="row">
+        <div class="col-sm-4">
+          <a href="/about.html" class="btn about about"
+            title="About Me"><i class="fa-solid fa-user"></i> </a
+          >
+        </div>
+        <div class="col-sm-4">
+          <a href="/work.html" class="btn about projects"
+            title="Projects"><i class="fa-solid fa-folder-open"></i></a
+          >
+        </div>
+        <div class="col-sm-4">
+          <a href="/contact.html" class="btn about contact"
+            title="Contact Me"><i class="fa-solid fa-envelope"></i> </a
+          >
+      </div>
+    </div>
   </body>
 </html>
