--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h1>Ariana E. Ledezma</h1>
       <h4>Front-End Web Developer, based in San Diego, CA </h4>
       <br />
-      <img src="/img/smile.jpeg" width="600" class="homepage-image img-fluid" />
+      <img src="/img/profile_pic.jpg" width="600" class="homepage-image img-fluid" />
     
     <div class="container">
       <div class="row">
