Center aligned about me page info and items

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
       </div>
     </nav>
     <h1 class="about-title">About Me</h1>
-    <div class="container">
+    <div class="container about-container">
       <div class="row">
         <div class="col-md-5">
           <img
@@ -91,6 +91,7 @@
             class="about-image img-fluid p-50"
           />
         </div>
+        <div class="col-md-1"></div>
         <div class="col-md-5">
           <p class="about-info">
             I am a Certfied Front-end Web Developer from San Diego, CA. Some of
