Updated Contact Page with phone, email, and linked in Links

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,10 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/238a9ca503.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav
@@ -77,5 +81,64 @@
         </div>
       </div>
     </nav>
+    <h1 class="contact-header">Contact Me</h1>
+    <h2 class="contact-subheading">
+      Excited to be apart of your next project!
+    </h2>
+    <hr />
+    <br />
+
+    <h5>
+      <i class="fa-solid fa-envelope"></i> Email
+      <br />
+      <a href="mailto:aeledezma72@gmail.com" class="contact-email"
+        >aeledezma72@gmail.com</a
+      >
+    </h5>
+    <br />
+    <br />
+    <br />
+    <h5>
+      <i class="fa-solid fa-phone"></i> Call
+      <br />
+      <a href="tel:16199429384" class="contact-email">+1 (619) 942-9384</a>
+    </h5>
+    <br />
+    <br />
+    <br />
+    <h5>
+      <i class="fa-solid fa-globe"></i> LinkedIn
+      <br />
+      <a
+        href="https://www.linkedin.com/in/ariana-ledezma-09784813a/"
+        class="contact-email"
+        >Go to Ariana Ledezma's Profile</a
+      >
+    </h5>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="container about-page-bottom">
+      <div class="row">
+        <div class="col-sm-4">
+          <a href="/about.html" class="btn about about" title="About Me"
+            ><i class="fa-solid fa-user"></i>
+          </a>
+        </div>
+        <div class="col-sm-4">
+          <a href="/work.html" class="btn about projects" title="Projects"
+            ><i class="fa-solid fa-folder-open"></i
+          ></a>
+        </div>
+        <div class="col-sm-4">
+          <a href="/contact.html" class="btn about contact" title="Contact Me"
+            ><i class="fa-solid fa-envelope"></i>
+          </a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
