Added footer to all pages

--- a/about.html
+++ b/about.html
@@ -111,8 +111,7 @@
             GitHub, AXIOS, FontAwesome, CodeSandbox & much more! I am certified
             and have multiple certifcates and projects to back that up. Please
             enjoy my projects in the
-            <i>Projects</i> Page and hope to be apart of
-            YOUR project soon!
+            <i>Projects</i> Page and hope to be apart of YOUR project soon!
           </p>
         </div>
       </div>
@@ -121,20 +120,26 @@
     <div class="container about-page-bottom">
       <div class="row">
         <div class="col-sm-4">
-          <a href="/about.html" class="btn about about"
-            title="About Me"><i class="fa-solid fa-user"></i> </a
-          >
+          <a href="/about.html" class="btn about about" title="About Me"
+            ><i class="fa-solid fa-user"></i>
+          </a>
         </div>
         <div class="col-sm-4">
-          <a href="/work.html" class="btn about projects"
-            title="Projects"><i class="fa-solid fa-folder-open"></i></a
-          >
+          <a href="/work.html" class="btn about projects" title="Projects"
+            ><i class="fa-solid fa-folder-open"></i
+          ></a>
         </div>
         <div class="col-sm-4">
-          <a href="/contact.html" class="btn about contact"
-            title="Contact Me"><i class="fa-solid fa-envelope"></i> </a
-          >
+          <a href="/contact.html" class="btn about contact" title="Contact Me"
+            ><i class="fa-solid fa-envelope"></i>
+          </a>
+        </div>
       </div>
     </div>
+    <footer>
+      <a href="mailto:aeledezma72@gmail.com"
+        >Contact me <strong>immediately</strong> here!</a
+      >
+    </footer>
   </body>
 </html>
