--- a/contact.html
+++ b/contact.html
@@ -140,5 +140,10 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a href="mailto:aeledezma72@gmail.com"
+        >Contact me <strong>immediately</strong> here!</a
+      >
+    </footer>
   </body>
 </html>
