--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
       <h4>Front-End Web Developer, based in San Diego, CA </h4>
       <br />
       <img src="/img/profile_pic.jpg" width="600" class="homepage-image img-fluid" />
-    
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
@@ -82,5 +81,8 @@
           >
       </div>
     </div>
+    </div>
+    <footer> <a href="mailto:aeledezma72@gmail.com">Contact me <strong>immediately</strong> here!</a></footer>
+  
   </body>
 </html>
