--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>🏠 HOMEPAGE</title>
+    <title>🏠 HOMEPAGE - Portfolio of Ariana Ledezma Front-End Developer</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,23 +35,23 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top navbar-dark bg-dark" dstyle="background-color: #e3f2fd;">
   <div class="container-fluid">
-    <a class="navbar-brand text-bg-dark p-3" href="/">Ariana E. Ledezma</a>
+    <a class="navbar-brand text-bg-dark p-3" href="/" title="Homepage">Ariana E. Ledezma</a>
     <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon "></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active text-bg-dark p-3" aria-current="page" href="#">Home</a>
+          <a class="nav-link active text-bg-dark p-3" aria-current="page" href="#" title="Homepage">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-bg-dark p-3" href="/about.html">About Me</a>
+          <a class="nav-link active text-bg-dark p-3" href="/about.html" title="About Ariana">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-bg-dark p-3" href="/work.html">Projects</a>
+          <a class="nav-link active text-bg-dark p-3" href="/work.html" title="Ariana's Projects">Projects</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link active text-bg-dark p-3" href="/contact.html">Contact Me</a>
+          <a class="nav-link active text-bg-dark p-3" href="/contact.html" title="Contact Ariana">Contact Me</a>
         </li>
       </ul>
     </div>
