--- a/work.html
+++ b/work.html
@@ -40,7 +40,9 @@
       dstyle="background-color: #e3f2fd;"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-bg-dark p-3" href="/">Ariana E. Ledezma</a>
+        <a class="navbar-brand text-bg-dark p-3" href="/" title="Homepage"
+          >Ariana E. Ledezma</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -58,22 +60,32 @@
               <a
                 class="nav-link active text-bg-dark p-3"
                 aria-current="page"
-                href="/"
+                href="#"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-bg-dark p-3" href="/about.html"
+              <a
+                class="nav-link active text-bg-dark p-3"
+                href="/about.html"
+                title="About Ariana"
                 >About Me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-bg-dark p-3" href="/work.html"
+              <a
+                class="nav-link active text-bg-dark p-3"
+                href="/work.html"
+                title="Ariana's Projects"
                 >Projects</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active text-bg-dark p-3" href="/contact.html"
+              <a
+                class="nav-link active text-bg-dark p-3"
+                href="/contact.html"
+                title="Contact Ariana"
                 >Contact Me</a
               >
             </li>
