Made Website SEO Friendly with titles for links and meta:desc

--- a/about.html
+++ b/about.html
@@ -101,6 +101,7 @@
             src="/img/shadow.jpg"
             width="600"
             class="about-image img-fluid p-50"
+            alt="picture of Ariana infront of a blue and pink light"
           />
         </div>
         <div class="col-md-1"></div>
@@ -149,8 +150,16 @@
       </div>
     </div>
     <footer>
-      <a href="mailto:aeledezma72@gmail.com"
+      <a href="mailto:aeledezma72@gmail.com" title="Email Ariana"
         >Contact me <strong>immediately</strong> here!</a
+      >
+    </footer>
+    <footer>
+      This project is open-sourced on
+      <a
+        href="https://github.com/ariaLed72/Project-Portfolio"
+        title="to GitHub Repository"
+        >GitHub</a
       >
     </footer>
   </body>
