--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="This is the finished works by Ariana Ledezma, front-end web developer in San Dieog"
+      content="Contact Ariana Ledezma for your next project here"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -103,7 +103,10 @@
     <h5>
       <i class="fa-solid fa-envelope"></i> Email
       <br />
-      <a href="mailto:aeledezma72@gmail.com" class="contact-email"
+      <a
+        href="mailto:aeledezma72@gmail.com"
+        class="contact-email"
+        title="Email Ariana"
         >aeledezma72@gmail.com</a
       >
     </h5>
@@ -113,7 +116,12 @@
     <h5>
       <i class="fa-solid fa-phone"></i> Call
       <br />
-      <a href="tel:16199429384" class="contact-email">+1 (619) 942-9384</a>
+      <a
+        href="tel:16199429384"
+        class="contact-email"
+        title="Call/FaceTime Ariana"
+        >+1 (619) 942-9384</a
+      >
     </h5>
     <br />
     <br />
@@ -124,6 +132,7 @@
       <a
         href="https://www.linkedin.com/in/ariana-ledezma-09784813a/"
         class="contact-email"
+        title="Go to LinkedIn"
         >Go to Ariana Ledezma's Profile</a
       >
     </h5>
@@ -153,8 +162,17 @@
       </div>
     </div>
     <footer>
-      <a href="mailto:aeledezma72@gmail.com"
+      <a href="mailto:aeledezma72@gmail.com" title="Email Ariana"
         >Contact me <strong>immediately</strong> here!</a
+      >
+    </footer>
+
+    <footer>
+      This project is open-sourced on
+      <a
+        href="https://github.com/ariaLed72/Project-Portfolio"
+        title="to GitHub Repository"
+        >GitHub</a
       >
     </footer>
   </body>
