--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Ariana Ledezma is a front-end web developer based in San Digeo, CA and this is her portfolio of finished web works"
+      content="Ariana Ledezma is a front-end web developer based in San Digeo, CA and this is the homepage of her portfolio of finished web works"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -62,7 +62,7 @@
       <h1>Ariana E. Ledezma</h1>
       <h4>Front-End Web Developer, based in San Diego, CA </h4>
       <br />
-      <img src="/img/profile_pic.jpg" width="600" class="homepage-image img-fluid" />
+      <img src="/img/profile_pic.jpg" width="600" class="homepage-image img-fluid" alt="picture of Ariana"/>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
@@ -82,7 +82,11 @@
       </div>
     </div>
     </div>
-    <footer> <a href="mailto:aeledezma72@gmail.com">Contact me <strong>immediately</strong> here!</a></footer>
-  
+    <footer> <a href="mailto:aeledezma72@gmail.com" title="Email Ariana">Contact me <strong>immediately</strong> here!</a></footer>
+ 
+    <footer>
+      This project is open-sourced on
+      <a href="https://github.com/ariaLed72/Project-Portfolio" title="to GitHub Repository">GitHub</a>
+    </footer>
   </body>
 </html>
