--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="This is the finished works by Ariana Ledezma, front-end web developer in San Dieog"
+      content="This is the finished works by Ariana Ledezma, front-end web developer in San Diego"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -102,7 +102,10 @@
             href="https://www.shecodes.io/workshops/shecodes-basics-577aaca1-9ef5-4506-844e-920612b1a18b/projects/1405100"
             target="_blank"
           >
-            <img src="/img/shrek.png" class="project-image img-fluid p-50"
+            <img
+              src="/img/shrek.png"
+              class="project-image img-fluid p-50"
+              alt="Shrek project screenshot"
           /></a>
 
           <h4 class="project-link">Special Interest Project</h4>
@@ -113,7 +116,10 @@
             href="https://www.shecodes.io/workshops/shecodes-basics-add-on-16c6bb1b-1a9f-4cee-aa6d-d1d1d96c5d76/projects/1429002"
             target="_blank"
           >
-            <img src="/img/italian.png" class="project-image img-fluid p-50"
+            <img
+              src="/img/italian.png"
+              class="project-image img-fluid p-50"
+              alt="Screenshot of Italian Cooking(hobby) Project"
           /></a>
           <h4 class="project-link">Italian Cooking</h4>
           <h5>Built with HTML, CSS, & JavaScript</h5>
@@ -130,6 +136,7 @@
             <img
               src="/img/weather-app.png"
               class="project-image img-fluid p-50"
+              alt="Screenshot of Weather App project"
           /></a>
 
           <h4 class="project-link">Weather App</h4>
@@ -146,6 +153,7 @@
             <img
               src="/img/world-clock.png"
               class="project-image img-fluid p-50"
+              alt="Screenshot of World Clock project"
           /></a>
 
           <h4 class="project-link">World Clock</h4>
@@ -177,8 +185,16 @@
       </div>
     </div>
     <footer>
-      <a href="mailto:aeledezma72@gmail.com"
+      <a href="mailto:aeledezma72@gmail.com" title="Email Ariana"
         >Contact me <strong>immediately</strong> here!</a
+      >
+    </footer>
+    <footer>
+      This project is open-sourced on
+      <a
+        href="https://github.com/ariaLed72/Project-Portfolio"
+        title="to GitHub Repository"
+        >GitHub</a
       >
     </footer>
   </body>
