Updated Hobby Project name

--- a/work.html
+++ b/work.html
@@ -121,7 +121,7 @@
               class="project-image img-fluid p-50"
               alt="Screenshot of Italian Cooking(hobby) Project"
           /></a>
-          <h4 class="project-link">Italian Cooking</h4>
+          <h4 class="project-link">Hobby Project</h4>
           <h5>Built with HTML, CSS, & JavaScript</h5>
         </div>
       </div>
