Corrected link address

--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
       <div class="row">
         <div class="col-md-6">
           <a
-            href="hhttps://www.shecodes.io/workshops/shecodes-plus-ed0608b6-995a-4521-ad20-fc03fea2c0e7/projects/1544791"
+            href="https://www.shecodes.io/workshops/shecodes-plus-ed0608b6-995a-4521-ad20-fc03fea2c0e7/projects/1544791"
             target="_blank"
           >
             <img
