Updated GitHub Link to open blank page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
  
     <footer>
       This project is open-sourced on
-      <a href="https://github.com/ariaLed72/Project-Portfolio" title="to GitHub Repository">GitHub</a>
+      <a href="https://github.com/ariaLed72/Project-Portfolio" title="to GitHub Repository" target="_blank">GitHub</a>
     </footer>
   </body>
 </html>
