--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
       <a
         href="https://github.com/ariaLed72/Project-Portfolio"
         title="to GitHub Repository"
-        >GitHub</a
+         target="_blank">GitHub</a
       >
     </footer>
   </body>
