--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@
       This project is open-sourced on
       <a
         href="https://github.com/ariaLed72/Project-Portfolio"
-        title="to GitHub Repository"
+        title="to GitHub Repository" target="_blank"
         >GitHub</a
       >
     </footer>
