--- a/work.html
+++ b/work.html
@@ -194,7 +194,7 @@
       <a
         href="https://github.com/ariaLed72/Project-Portfolio"
         title="to GitHub Repository"
-        >GitHub</a
+        target="_blank">GitHub</a
       >
     </footer>
   </body>
