Updated homepage link on navbar & Projects page for smaller screens

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
               <a
                 class="nav-link active text-bg-dark p-3"
                 aria-current="page"
-                href="#"
+                href="/"
                 title="Homepage"
                 >Home</a
               >
@@ -94,6 +94,7 @@
       </div>
     </nav>
     <h1 class="about-title">About Me</h1>
+    <hr />
     <div class="container about-container">
       <div class="row">
         <div class="col-md-5">
@@ -159,7 +160,8 @@
       <a
         href="https://github.com/ariaLed72/Project-Portfolio"
         title="to GitHub Repository"
-         target="_blank">GitHub</a
+        target="_blank"
+        >GitHub</a
       >
     </footer>
   </body>
