--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
               <a
                 class="nav-link active text-bg-dark p-3"
                 aria-current="page"
-                href="#"
+                href="/"
                 title="Homepage"
                 >Home</a
               >
@@ -94,22 +94,23 @@
       </div>
     </nav>
     <h1 class="project-header">Projects</h1>
-    <br />
+    <hr />
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 project-col">
           <a
             href="https://www.shecodes.io/workshops/shecodes-basics-577aaca1-9ef5-4506-844e-920612b1a18b/projects/1405100"
             target="_blank"
           >
             <img
               src="/img/shrek.png"
-              class="project-image img-fluid p-50"
+              class="project-image img-fluid"
               alt="Shrek project screenshot"
           /></a>
 
           <h4 class="project-link">Special Interest Project</h4>
-          <h5>Built with HTML and CSS</h5>
+          <h5>Built with HTML, CSS, & JavaScript</h5>
+          <br />
         </div>
         <div class="col-md-6">
           <a
@@ -118,7 +119,7 @@
           >
             <img
               src="/img/italian.png"
-              class="project-image img-fluid p-50"
+              class="project-image img-fluid"
               alt="Screenshot of Italian Cooking(hobby) Project"
           /></a>
           <h4 class="project-link">Hobby Project</h4>
@@ -135,7 +136,7 @@
           >
             <img
               src="/img/weather-app.png"
-              class="project-image img-fluid p-50"
+              class="project-image img-fluid"
               alt="Screenshot of Weather App project"
           /></a>
 
@@ -144,6 +145,7 @@
             Built with HTML, CSS, JavaScript, AXIOS, SheCodes Weather API,
             GitHub, & Netlify
           </h5>
+          <br />
         </div>
         <div class="col-md-6">
           <a
@@ -152,7 +154,7 @@
           >
             <img
               src="/img/world-clock.png"
-              class="project-image img-fluid p-50"
+              class="project-image img-fluid"
               alt="Screenshot of World Clock project"
           /></a>
 
@@ -194,7 +196,8 @@
       <a
         href="https://github.com/ariaLed72/Project-Portfolio"
         title="to GitHub Repository"
-        target="_blank">GitHub</a
+        target="_blank"
+        >GitHub</a
       >
     </footer>
   </body>
