--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
               <a
                 class="nav-link active text-bg-dark p-3"
                 aria-current="page"
-                href="#"
+                href="/"
                 title="Homepage"
                 >Home</a
               >
@@ -171,7 +171,8 @@
       This project is open-sourced on
       <a
         href="https://github.com/ariaLed72/Project-Portfolio"
-        title="to GitHub Repository" target="_blank"
+        title="to GitHub Repository"
+        target="_blank"
         >GitHub</a
       >
     </footer>
