--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active text-bg-dark p-3" aria-current="page" href="#" title="Homepage">Home</a>
+          <a class="nav-link active text-bg-dark p-3" aria-current="page" href="/" title="Homepage">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active text-bg-dark p-3" href="/about.html" title="About Ariana">About Me</a>
